--- a/src/app/views/users/roles/roles.component.html
+++ b/src/app/views/users/roles/roles.component.html
@@ -2,7 +2,12 @@
     <div class="row">
         <div class="col-md-6">
             <h2> Usuarios </h2>
+            <h5>Jefes de Departamento</h5>
+            <app-user-table [rows]="bossDepartments"></app-user-table>
+            <hr>
 
+            <h5>Subdirectores</h5>
+            <app-user-table [rows]="vicePrincipals"></app-user-table>
         </div>
         <div class="col-md-6">
             <h2>Formulario</h2>
