--- a/src/app/views/users/roles/components/user-table/user-table.component.html
+++ b/src/app/views/users/roles/components/user-table/user-table.component.html
@@ -9,10 +9,11 @@
     [scrollbarV]="true"
     [rows]='rows'>
     <!-- Column Templates -->
-    <ngx-datatable-column [minWidth]="100" name="Permisos" width="50">
-        <ng-template ngx-datatable-cell-template>
-        <span class="badge badge-success">CONCEDIDOS</span>
-        <!-- <span class="badge badge-warning">DENEGADOS</span> -->
+    <ngx-datatable-column [minWidth]="100" name="Permisos" prop="hasRole" width="50">
+        <ng-template let-value="value" ngx-datatable-cell-template>
+            <span [ngClass]="{'badge-warning': !value, 'badge-success': value}" class="badge">
+                {{ value ? 'CONCEDIDOS' : 'DENEGADOS' }}
+            </span>
         </ng-template>
     </ngx-datatable-column>
 
