--- a/src/app/components/app-session-footer/app-session-footer.component.html
+++ b/src/app/components/app-session-footer/app-session-footer.component.html
@@ -2,7 +2,7 @@
     <div class="container pt-3 pb-3">
         <a href="#">
             ITCG's Purchase System
-        </a>© 2018 El nombre de nuestra enterprise asi bien perro
+        </a>© 2018 2Tall2Short
 
         <div class="s-content-footer-right">
             Powered by <a href="#">ITCG's Purchase System</a>
