Fixed #8 - Fixed old footer on the login page, apoko no karnal :v

--- a/src/app/components/app-session-footer/app-session-footer.component.html
+++ b/src/app/components/app-session-footer/app-session-footer.component.html
@@ -2,10 +2,11 @@
     <div class="container pt-3 pb-3">
         <a href="#">
             ITCG's Purchase System
-        </a>© 2018 El nombre de nuestra enterprise asi bien perro
+        </a>© 2018 2Tall2Short 
 
         <div class="s-content-footer-right">
-            Powered by <a href="#">ITCG's Purchase System</a>
+          Powered by <a href="https://angular.io/">Angular 4+</a> and 
+                     <a href="https://loopback.io/">Loobpack 3.x</a>
         </div>
     </div>
 </footer>
