Fixed-#9 - Now all the general views for all the warehouses are taking more screen space in order to have a better display for mobile devices.

--- a/src/app/views/warehouse/department/components/departments/departments.component.html
+++ b/src/app/views/warehouse/department/components/departments/departments.component.html
@@ -1,4 +1,4 @@
-<div class="container"> 
+<div class="animated fadeIn"> 
 
     <div class="col-sm-12 col-md-12">
       <div class="card border-primary">
@@ -35,7 +35,7 @@
       </div>
     </div>
     
-    <div class="col-md-12">
+    <div class="col-sm-12 col-md-12">
         <ngx-datatable style="height: 550px" #myTable class='material expandable' [columnMode]="'force'" [headerHeight]="50" [footerHeight]="50" 
         [rowHeight]="50" [scrollbarV]="true" [scrollbarH]="true" [rows]='departments'>
           <!-- Row Detail Template -->
