--- a/src/app/views/warehouse/project/components/projects/projects.component.html
+++ b/src/app/views/warehouse/project/components/projects/projects.component.html
@@ -35,7 +35,7 @@
     </div>
   </div>
 
-  <div class="col-md-12 mb-3 col-xs-12">
+  <div class="col-sm-12 col-md-12">
     <ngx-datatable 
       style="height: 550px"
       #myTable
