--- a/src/app/views/warehouse/department/components/departments/departments.component.html
+++ b/src/app/views/warehouse/department/components/departments/departments.component.html
@@ -51,11 +51,15 @@
                       <input type="text" readonly class="form-control read-only-normal-style" value="{{ row.id }}">
                     </div>
                   </div>
-            
                   
-                  <div class="col-md-7">
+                  <div class="col-md-5">
                     <label for="nombre" class="col-md-2 col-form-label">Nombre de departamento:</label>
                     <input type="text" readonly class="form-control read-only-normal-style" value="{{ row.name }}">
+                  </div>
+
+                  <div class="col-md-5">
+                    <label for="jefe" class="col-md-2 col-form-label">Jede de departamento:</label>
+                    <input type="text" readonly class="form-control read-only-normal-style" value="{{ row.boss_department.name }}">
                   </div>
                     
                   <div class="col-md-3">
@@ -64,9 +68,6 @@
                       <input type="text" readonly class="form-control read-only-normal-style" value="{{ row.budget }}">
                     </div>
                   </div>
-                </div>
-  
-                <div class="row">
 
                   <div class="col-md-4">
                     <div class="form-group">
@@ -74,7 +75,7 @@
                       <input type="text" readonly class="form-control read-only-normal-style" value="{{ row.subdirection.name }}">
                     </div>
                   </div>
-        
+
                   <div class="col-md-2">
                     <div class="form-group">
                       <ul class="list-group" style="margin-top: 30px;">
@@ -82,8 +83,8 @@
                       </ul>
                     </div>
                   </div>
-        
                 </div>
+
               </div>
   
             </ng-template>
@@ -110,6 +111,13 @@
     
         <!-- El [minWidth] es importante para cuando es responsive, chequenle bien gg -->
         <ngx-datatable-column [minWidth]="180" name="Nombre" prop="name" width="180">
+          <ng-template let-value="value" ngx-datatable-cell-template>
+            <strong>{{value}}</strong>
+          </ng-template>
+        </ngx-datatable-column>
+
+        <!-- El [minWidth] es importante para cuando es responsive, chequenle bien gg -->
+        <ngx-datatable-column [minWidth]="180" name="Jefe de departamento" prop="boss_department.name" width="180">
           <ng-template let-value="value" ngx-datatable-cell-template>
             <strong>{{value}}</strong>
           </ng-template>
